# esp32

./: README.md
bt_discovery/: sdkconfig
bt_discovery/main/: bt_discovery.c
esp32_scansnifferSend/: Makefile  sdkconfig  sdkconfig.defaults
esp32_scansnifferSend/components/wayz/: CMakeLists.txt  component.mk
esp32_scansnifferSend/components/wayz/include/: user_bmp.h  user_bt.h  user_common.h  user_i2c.h  user_ota.h  user_radar.h  user_sim800c.h  user_sniffer.h  user_uart.h  user_wifi.h
esp32_scansnifferSend/components/wayz/src/: user_bmp.c  user_bt.c  user_i2c.c  user_nvs.c  user_ota.c  user_radar.c  user_sim800c.c  user_sniffer.c  user_uart.c  user_wifi.c
esp32_scansnifferSend/main/: Kconfig.projbuild  user_main.c  user_main.h
i2c_self_test/: sdkconfig
i2c_self_test/main/: BME280_BMP280_BMP180.c  BME280_BMP280_BMP180.h  CMakeLists.txt  i2c_example_main.c  my_iic.c  my_iic.h
new_to_new_with_old/: sdkconfig  sdkconfig.defaults
new_to_new_with_old/main/: CMakeLists.txt  ota_example_main.c
